Clear Cookies on Logout

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 redis_username="default"
 redis_password="02J4lzbMtT06zIWLYIk7LmobFEi70wR0"
 
-session_cookie_domain = ".127.0.0.1"
+session_cookie_domain = ".trinity.project.projectrexa.dedyn.io"
 
 planetscale_username = "hxajbpzbbegsei3k0dlc"
 planetscale_password = "pscale_pw_FWRWtnJU7FMLgFFgDXPOEz5i76i3NLxNQRWxtvnQsMF"
